--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../img/img_logo.png" type="image/x-icon" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/style.css" />
     <title>BattleFRONT - Cadastro</title>
   </head>
-
   <body>
+
     <header>
-      <nav class="navbar navbar-expand-lg fixed-top pt-1 estilo-barra-navegacao">
+      <nav
+        class="navbar navbar-expand-lg fixed-top pt-1 estilo-barra-navegacao"
+      >
         <section class="container-fluid">
-          <a class="navbar-brand estilo-link-barranav" href="../../../index.html">BattleFRONT</a>
+          <a
+            class="navbar-brand texto-barra-navegacao"
+            href="../../../index.html"
+          >
+            <img
+              class="logo-barranav"
+              src="../img/img_logo.png"
+              alt="Logo BattleFRONT"
+            />
+            BattleFRONT</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -36,12 +49,16 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end estilo-link-barranav" href="#"
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./produtos.html"
                   >Serviços</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end estilo-link-barranav" href="#"
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./contato.html"
                   >Contato</a
                 >
               </li>
@@ -104,7 +121,9 @@
           placeholder="Digite uma senha"
         />
 
-        <label class="espaco-label" for="txtSenha2">Confirmação de senha:</label>
+        <label class="espaco-label" for="txtSenha2"
+          >Confirmação de senha:</label
+        >
         <input
           type="password"
           name="txtSenha2"
@@ -136,11 +155,7 @@
             placeholder="Digite somente números"
           />
           <div class="input-group-append">
-            <button
-              class="btn botao-cor-especial"
-              type="button"
-              id="btn-cep"
-            >
+            <button class="btn botao-cor-especial" type="button" id="btn-cep">
               Buscar
             </button>
           </div>
