--- a/assets/view/html/contato.html
+++ b/assets/view/html/contato.html
@@ -1,110 +1,201 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../img/img_logo.png" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
+    <title>BattleFRONT - Quem somos nós</title>
+  </head>
+  <body>
+    <header>
+      <nav
+        class="navbar navbar-expand-lg fixed-top pt-1 estilo-barra-navegacao"
+      >
+        <section class="container-fluid">
+          <a
+            class="navbar-brand texto-barra-navegacao"
+            href="../../../index.html"
+          >
+            <img
+              class="logo-barranav"
+              src="../img/img_logo.png"
+              alt="Logo BattleFRONT"
+            />
+            BattleFRONT</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNavAltMarkup"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./produtos.html"
+                  >Serviços</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./contato.html"
+                  >Contato</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./Cadastro.html"
+                  >Cadastro</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./Login.html"
+                  >Login</a
+                >
+              </li>
+            </ul>
+          </div>
+        </section>
+      </nav>
+    </header>
 
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../css/style.css" />
-	<link rel="icon" type="image/x-icon" href="../img/img_logo.png">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-	</script>
-	<title>BattleFRONT - Quem somos nós</title>
-</head>
-
-<body>
-	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
-			<div class="container-fluid ms-3">
-				<a class="navbar-brand font-monospace fw-bold" href="#">BattleFRONT</a>
-				<button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse"
-					data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-					aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse justify-content-end me-3" id="navbarNavAltMarkup">
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link active d-flex justify-content-center" href="#">Serviços</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link active d-flex justify-content-center" href="#">Cadastro</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link active d-flex justify-content-center" href="#">log-in</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</header>
-
-	<main>
-	</main>
-	<section class="m-5 text-center">
-		<h2>Nossa equipe é formada pelos seguintes estudantes da T14 da Resilia:</h2>
-	</section>
-		<section class="container d-flex justify content-center">
-			<!--Alteração de margin e padding é aqui-->
-			<div class="row">
-				<article class="col">
-					<div
-						class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
-						<img src="" class="card-img-top image fluid" alt="">
-						<div class="card p-2">
-							<h4 class="card-title text-center">Victor Del' Duca</h4>
-							<a href="https://github.com/Vitor-DelDuca" class="btn" role="button">Github</a>
-							<a href="https://www.linkedin.com/in/vitor-del-duca-gestao-programacao-treinamento/" class="btn" role="button">LinkedIn</a>
+    <main
+      class="container h-100 d-flex align-items-center justify-content-center"
+    >
+      <section class="col-10 col-xl-8 col-lg-8 col-md-8 col-sm-8">
+        <div class="row">
+          <h2>
+            Nossa equipe é formada pelos seguintes estudantes da T14 da Resilia:
+          </h2>
+					<article class="col">
+						<div
+							class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
+						>
+							<img src="" class="card-img-top image fluid" alt="" />
+							<div class="card-body p-2">
+								<h4 class="card-title text-center">Christopher Mamed</h4>
+								<a
+									target="_blank"
+									href="https://github.com/chrismamed"
+									class="btn"
+									role="button"
+									>Github</a
+								>
+								<a
+									target="_blank"
+									href="https://www.linkedin.com/in/christopher-mamed-407485139/"
+									class="btn"
+									role="button"
+									>LinkedIn</a
+								>
+							</div>
 						</div>
-					</div>
-				</article>
-				<article class="col">
-					<div
-						class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
-						<img src="" class="card-img-top image fluid" alt="">
-						<div class="card p-2">
-							<h4 class="card-title text-center">Hadassa Moraes</h4>
-							<a href="https://github.com/hadmoraes" class="btn" role="button">Github</a>
-							<a href="https://www.linkedin.com/in/hadassa-moraes-5a6712230/" class="btn" role="button">LinkedIn</a>
-						</div>
-					</div>
-				</article>
-				<article class="col">
-					<div
-						class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
-						<img src="" class="card-img-top image fluid" alt="">
-						<div class="card p-2">
-							<h4 class="card-title text-center">Ytallo Bruno</h4>
-							<a href="https://github.com/ytallobruno" class="btn" role="button">Github</a>
-							<a href="https://www.linkedin.com/in/ytallobruno/" class="btn" role="button">LinkedIn</a>
-						</div>
-					</div>
-				</article>
-				<article class="col">
-					<div
-						class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
-						<img src="" class="card-img-top image fluid" alt="">
-						<div class="card p-2">
-							<h4 class="card-title text-center">Christopher Mamed</h4>
-							<a href="https://github.com/chrismamed" class="btn" role="button">Github</a>
-							<a href="https://www.linkedin.com/in/christopher-mamed-407485139/" class="btn" role="button">LinkedIn</a>
-						</div>
-					</div>
-				</article>
-			</div>
-		</section>
-	</main>
+					</article>
+          <article class="col">
+            <div
+              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
+            >
+              <img src="" class="card-img-top image fluid" alt="" />
+              <div class="card-body p-2">
+                <h4 class="card-title text-center">Victor Del' Duca</h4>
+                <a
+                  target="_blank"
+                  href="https://github.com/Vitor-DelDuca"
+                  class="btn"
+                  role="button"
+                  >Github</a
+                >
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/vitor-del-duca-gestao-programacao-treinamento/"
+                  class="btn"
+                  role="button"
+                  >LinkedIn</a
+                >
+              </div>
+            </div>
+          </article>
+          <article class="col">
+            <div
+              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
+            >
+              <img src="" class="card-img-top image fluid" alt="" />
+              <div class="card-body p-2">
+                <h4 class="card-title text-center">Hadassa Moraes</h4>
+                <a
+                  target="_blank"
+                  href="https://github.com/hadmoraes"
+                  class="btn"
+                  role="button"
+                  >Github</a
+                >
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/hadassa-moraes-5a6712230/"
+                  class="btn"
+                  role="button"
+                  >LinkedIn</a
+                >
+              </div>
+            </div>
+          </article>
+          <article class="col">
+            <div
+              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
+            >
+              <img src="" class="card-img-top image fluid" alt="" />
+              <div class="card-body p-2">
+                <h4 class="card-title text-center">Ytallo Bruno</h4>
+                <a
+                  target="_blank"
+                  href="https://github.com/ytallobruno"
+                  class="btn"
+                  role="button"
+                  >Github</a
+                >
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/ytallobruno/"
+                  class="btn"
+                  role="button"
+                  >LinkedIn</a
+                >
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+    </main>
 
-	<footer class="fixed-bottom bg-light p-1 text-center">
-		<p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
-
-	</footer>
-</body>
-
+    <footer class="fixed-bottom bg-light p-1 text-center">
+      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
