--- a/assets/view/html/produtos.html
+++ b/assets/view/html/produtos.html
@@ -1,115 +1,190 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../img/img_logo.png" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
+    <title>BattleFRONT - Produtos</title>
+  </head>
+  <body>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="../img/img_logo.png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-  </script>
-  <title>BattleFRONT - Produtos</title>
-</head>
+    <header>
+      <nav
+        class="navbar navbar-expand-lg fixed-top pt-1 estilo-barra-navegacao"
+      >
+        <section class="container-fluid">
+          <a
+            class="navbar-brand texto-barra-navegacao"
+            href="../../../index.html"
+          >
+            <img
+              class="logo-barranav"
+              src="../img/img_logo.png"
+              alt="Logo BattleFRONT"
+            />
+            BattleFRONT</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNavAltMarkup"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./produtos.html"
+                  >Serviços</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./contato.html"
+                  >Contato</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./Cadastro.html"
+                  >Cadastro</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./Login.html"
+                  >Login</a
+                >
+              </li>
+            </ul>
+          </div>
+        </section>
+      </nav>
+    </header>
 
-<body>
+    <main>
+      <section class="principal mt-5 pt-4 text-center">
+        <h2
+          class="fonte-titulo"
+        >
+          Conheça nossos planos:
+        </h2>
+        <p class="fonte-texto">
+          Para utilizar a plataforma é necessário selecionar um dos planos
+          abaixo e realizar o cadastro. Somente assim podemos personalizar o seu
+          plano de criação.
+        </p>
+        <p class="fonte-texto">
+          Contamos com uma excelente interface, desenvolvida especialmente para
+          o dev que está começando agora.
+        </p>
+        <p class="fonte-texto">Como?</p>
+        <p class="fonte-texto">
+          O nosso modelo de estudos identifica os erros semânticos e modifica
+          sua cor, a fim de que você possa analisar.
+        </p>
+        <p class="fonte-texto">
+          Junto a isso, o próprio sistema fornece sugestões se você estiver com
+          dificuldades em seguir as instruções do exercício.
+        </p>
+      </section>
 
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
-      <div class="container-fluid ms-3">
-        <a class="navbar-brand font-monospace fw-bold" href="#">BattleFRONT</a>
-        <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end me-3" id="navbarNavAltMarkup">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">Serviços</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">Cadastro</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">log-in</a>
-            </li>
-          </ul>
+      <section class="container product-cards d-flex justify-content-center">
+        <div class="container row w-100 justify-content-center">
+          <article class="col-12 col-xl-4 col-lg-6 col-md-8">
+            <div
+              class="card p-2 card-externo"
+            >
+              <img
+                src="../img/appDevelopment.png"
+                class="card-img-top card-posicao-imagem"
+                alt="App Development"
+              />
+              <div class="card p-1 card-interno">
+                <h4 class="card-title text-center">Gratuito</h4>
+                <p class="card-text text-center">
+                  Desafios de Flexbox + Landing pages em HTML e CSS puros
+                </p>
+                <p class="card-text text-center">
+                  O que irá receber além disso:<br> 3 projetos + 2 e-books.
+                </p>
+                <a href="#" class="btn botao-cor-especial">Escolher</a>
+              </div>
+            </div>
+          </article>
+          <article class="col-12 col-xl-4 col-lg-6 col-md-8">
+            <div
+              class="card p-2 card-externo"
+            >
+              <img
+                src="../img/onlineEducation.png"
+                class="card-img-top card-posicao-imagem"
+                alt="Studying"
+              />
+              <div class="card p-1 card-interno">
+                <h4 class="card-title text-center">Intermediário</h4>
+                <p class="card-text text-center">
+                  Desafios de JavaScript + Lógica de Programação + CSS Animations
+                </p>
+                <p class="card-text text-center">
+                  O que irá receber além disso:<br> 5 projetos + 3 e-books.
+                </p>
+                <a href="#" class="btn botao-cor-especial">Escolher</a>
+              </div>
+            </div>
+          </article>
+          <article class="col-12 col-xl-4 col-lg-6 col-md-8">
+            <div
+              class="card p-2 card-externo"
+            >
+              <img
+                src="../img/coding.png"
+                class="card-img-top card-posicao-imagem"
+                alt="Coding"
+              />
+              <div class="card p-1 card-interno">
+                <h4 class="card-title text-center">Premium</h4>
+                <p class="card-text text-center">
+                  Desafios avançados de JavaScript + JQuery + Integração de API's
+                </p>
+                <p class="card-text text-center">
+                  O que irá receber além disso:<br> 10 projetos + 5 e-books.
+                </p>
+                <a href="#" class="btn botao-cor-especial">Escolher</a>
+              </div>
+            </div>
+          </article>
         </div>
-      </div>
-    </nav>
-  </header>
+      </section>
+    </main>
 
-  <main>
-    <section class="principal mt-5 pt-4 text-center">
-      <!--Alteração de margin e padding é aqui-->
-      <h2 class="subtitle p-4 font-monospace fw-bold text-decoration-underline fs-1">Conheça nossos planos:
-      </h2>
-      <p class="fs-5">Para utilizar a plataforma é necessário selecionar um dos planos abaixo e realizar o
-        cadastro. Somente assim podemos personalizar o seu plano de criação.</p>
-      <p class="fs-5">Contamos com uma excelente interface, desenvolvida especialmente para o dev que está
-        começando agora.</p>
-      <p class="fs-5">Como?</p>
-      <p class="fs-5">O nosso modelo de estudos identifica os erros semânticos e modifica sua cor, a fim
-            de que você possa analisar.</p>
-      <p class="fs-5">Junto a isso, o próprio sistema fornece sugestões se você estiver com dificuldades
-            em seguir as instruções do exercício.</p>
-    </section>
-    <section class="product-cards mt-5 mb-2">
-      <!--Alteração de margin e padding é aqui-->
-      <div class="row row-cols-1 row-cols-md-3 g-4 m-4">
-        <article class="col">
-          <div class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
-            <img src="../img/appDevelopment.png" class="card-img-top image fluid" alt="App Development">
-            <div class="card p-2">
-              <h4 class="card-title text-center">Gratuito</h4>
-              <p class="card-text text-center">Desafios de Flexbox + Landing pages em HTML e CSS puros + Lógica de
-                programação.</p>
-              <p class="card-text text-center">Uma ótima escolha para quem está começando. Contém: 5 projetos para te
-                ajudar nesse início + 3 e-books.</p>
-              <a href="#" class="btn btn-secondary">Escolher</a>
-            </div>
-          </div>
-        </article>
-        <article class="col">
-          <div class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
-            <img src="../img/onlineEducation.png" class="card-img-top image fluid" alt="Studying">
-            <div class="card p-2">
-
-              <h4 class="card-title text-center">Intermediário</h4>
-              <p class="card-text text-center">Desafios de JavaScript + Loops + Funções + Imagens animadas</p>
-              <p class="card-text text-center">Recomendado para quem já está um pouco familiarizado com Lógica de
-                Programação. Contém: 3 projetos exclusivos para seu portfólio + 2 e-books.
-              </p>
-              <a href="#" class="btn btn-secondary">Escolher</a>
-            </div>
-          </div>
-        </article>
-        <article class="col">
-          <div class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
-            <img src="../img/coding.png" class="card-img-top image fluid" alt="Coding">
-            <div class="card p-2">
-              <h4 class="card-title text-center">Premium</h4>
-              <p class="card-text text-center">Desafios avançados de JavaScript + Consumo de API's + Manipulação de
-                Objetos + jQuerry + DOM </p>
-              <p class="card-text text-center">Parabéns, você tem sangue de barata! Nessa opção, contamos com 10
-                projetos que englobam todos os tópicos abordados + 5 e-books.</p>
-              <a href="#" class="btn btn-secondary">Escolher</a>
-            </div>
-          </div>
-        </article>
-      </div>
-    </section>
-  </main>
-
-
-  <footer class="fixed-bottom bg-light p-1 text-center">
-    <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
-  </footer>
-</body>
-
+    <footer class="bg-light p-1 text-center">
+      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
