--- a/assets/view/html/RecuperacaoSenha.html
+++ b/assets/view/html/RecuperacaoSenha.html
@@ -56,14 +56,14 @@
 
       </div>
 
-      <div class="alert alert-success" id="msg-sucesso" role="alert" hidden>
+      <div class="alert alert-success mt-4" id="msg-sucesso" role="alert" hidden>
         <h4 class="alert-heading">Sua senha foi redefinida com sucesso!</h4>
         <hr>
         <p>Cheque seu e-mail para acessar sua nova senha e tente fazer o login novamente.</p>
       </div>
 
 
-      <div class="alert alert-danger" id="msg-erro" role="alert" hidden>
+      <div class="alert alert-danger mt-4" id="msg-erro" role="alert" hidden>
         <h4 class="alert-heading">Seu e-mail não é valido!</h4>
         <hr>
         <p>Por favor, insira um email válido e tente novamente.</p>
