--- a/assets/view/html/Login.html
+++ b/assets/view/html/Login.html
@@ -56,7 +56,7 @@
         <input type="password" name="txtSenha" class="form-control text-center" id="senha" size="30" maxlength="30"
           placeholder="Digite sua senha" /><br />
 
-        <button type="submit" name="btnSubmitUsuario" class="btn btn-primary w-50" id="btn-login">
+        <button type="submit" name="btnSubmitUsuario" class="btn btn-primary w-50" id="btn-submit">
           Entrar
 
         </button>
@@ -64,6 +64,18 @@
 
         <a href="./RecuperacaoSenha.html" id="" class="text-primary p-3">Esqueceu sua senha?</a><br /><br />
       </div>
+
+      <div class="alert alert-success mt-4" id="msg-sucesso" role="alert" hidden>
+        <h4 class="alert-heading">Seu login foi realizado com sucesso!</h4>
+      </div>
+
+
+      <div class="alert alert-danger mt-4" id="msg-erro" role="alert" hidden>
+        <h4 class="alert-heading">Seu e-mail não é valido!</h4>
+        <hr>
+        <p>Por favor, insira um email válido e tente novamente.</p>
+      </div>
+
     </section>
   </main>
 
@@ -79,6 +91,7 @@
   <script src="../../models/js/emailModel.js"></script>
   <script src="../../view/js/manipuladorDom.js"></script>
   <script src="../../controller/js/inputController.js"></script>
+  <script src="../../controller/js/msgController.js"></script>
 </body>
 
 
